[TM-2895] Remove application export api endpoint.
