# resources/docs/swagger-v2.yml
@@ -2374,26 +2374,6 @@ paths:
       responses:
         '200':
           description: OK
-  '/v2/admin/forms/applications/{UUID}/export':
-    get:
-      summary: Export CSV document of applications belonging to a funding programme
-      description: The UUID provided is the Funding Programme ID that the applications are for
-      operationId: get-v2-admin-forms-applications-UUID-export
-      tags:
-        - Export
-        - V2 Application
-      produces:
-        - text/plain
-      parameters:
-        - type: string
-          name: UUID
-          in: path
-          required: true
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: file
   '/v2/applications/{UUID}/export':
     get:
       summary: Export CSV document of an application
